update project info

--- a/.docusaurus/docusaurus-plugin-content-pages/default/site-src-pages-projects-a-qu-a-mdx-f92.json
+++ b/.docusaurus/docusaurus-plugin-content-pages/default/site-src-pages-projects-a-qu-a-mdx-f92.json
@@ -2,7 +2,9 @@
   "type": "mdx",
   "permalink": "/Projects/AQuA",
   "source": "@site/src/pages/Projects/AQuA.mdx",
-  "title": "Augmented Quality Assessment (AQuA)",
-  "description": "Overview",
-  "frontMatter": {}
+  "title": "AQuA",
+  "description": "AQuA seeks to develop capacity and increase the pace of translation quality assurance. AQuA harnesses the latest",
+  "frontMatter": {
+    "title": "AQuA"
+  }
 }
