--- a/.docusaurus/docusaurus-plugin-content-pages/default/site-src-pages-projects-chat-md-ba9.json
+++ b/.docusaurus/docusaurus-plugin-content-pages/default/site-src-pages-projects-chat-md-ba9.json
@@ -2,6 +2,9 @@
   "type": "mdx",
   "permalink": "/Projects/chat",
   "source": "@site/src/pages/Projects/chat.md",
-  "title": "Read about chatbots here!",
-  "frontMatter": {}
+  "title": "M2 Chat Platform",
+  "description": "Manage multilingual user experiences at scale! Our revolutionary multilingual chat platform enables organizations to scale their bots to operate seamlessly across many different languages.",
+  "frontMatter": {
+    "title": "M2 Chat Platform"
+  }
 }
