--- a/.docusaurus/docusaurus-plugin-content-pages/default/site-src-pages-projects-a-qu-a-mdx-f92.json
+++ b/.docusaurus/docusaurus-plugin-content-pages/default/site-src-pages-projects-a-qu-a-mdx-f92.json
@@ -3,7 +3,7 @@
   "permalink": "/Projects/AQuA",
   "source": "@site/src/pages/Projects/AQuA.mdx",
   "title": "AQuA",
-  "description": "AQuA seeks to develop capacity and increase the pace of translation quality assurance. AQuA harnesses the latest",
+  "description": "What is AQuA?",
   "frontMatter": {
     "title": "AQuA"
   }
