--- a/.docusaurus/docusaurus-plugin-content-pages/default/site-src-pages-projects-a-qu-a-mdx-f92.json
+++ b/.docusaurus/docusaurus-plugin-content-pages/default/site-src-pages-projects-a-qu-a-mdx-f92.json
@@ -3,7 +3,7 @@
   "permalink": "/Projects/AQuA",
   "source": "@site/src/pages/Projects/AQuA.mdx",
   "title": "AQuA",
-  "description": "*We are currently piloting AQuA in a small number of Bible Translation field trials.",
+  "description": "As of April 2024, anyone in the bible translation movement can apply for an AQuA account.",
   "frontMatter": {
     "title": "AQuA"
   }
