--- a/.docusaurus/docusaurus-plugin-content-pages/default/site-src-pages-projects-chat-md-d7e.json
+++ b/.docusaurus/docusaurus-plugin-content-pages/default/site-src-pages-projects-chat-md-d7e.json
@@ -2,9 +2,9 @@
   "type": "mdx",
   "permalink": "/projects/chat",
   "source": "@site/src/pages/projects/chat.md",
-  "title": "M2 Chat Platform",
-  "description": "Manage multilingual user experiences at scale! Our revolutionary multilingual chat platform enables organizations to scale their bots to operate seamlessly across many different languages.",
+  "title": "M2 Chat",
+  "description": "M2 is a chatbot creation platform that puts multilingualism and trust first.",
   "frontMatter": {
-    "title": "M2 Chat Platform"
+    "title": "M2 Chat"
   }
 }
