--- a/.docusaurus/docusaurus-plugin-content-pages/default/site-src-pages-projects-acts-2-mdx-2e8.json
+++ b/.docusaurus/docusaurus-plugin-content-pages/default/site-src-pages-projects-acts-2-mdx-2e8.json
@@ -3,7 +3,7 @@
   "permalink": "/projects/acts2",
   "source": "@site/src/pages/projects/acts2.mdx",
   "title": "Acts 2",
-  "description": "Acts2 is a service that leverages the latest advances in Artificial Intelligence",
+  "description": "Acts2 is a service that leverages the latest advances in Artificial Intelligence to provide state-of-the-art",
   "frontMatter": {
     "title": "Acts 2"
   }
