--- a/.docusaurus/docusaurus-plugin-content-pages/default/site-src-pages-projects-faithbridge-mdx-9e1.json
+++ b/.docusaurus/docusaurus-plugin-content-pages/default/site-src-pages-projects-faithbridge-mdx-9e1.json
@@ -3,7 +3,7 @@
   "permalink": "/projects/faithbridge",
   "source": "@site/src/pages/projects/faithbridge.mdx",
   "title": "Faithbridge",
-  "description": "Faithbridge is a project that represents SIL’s research and development implementing more controllable",
+  "description": "Faithbridge is a reliable AI-powered Bible Q&A app that enables local language translators to interact",
   "frontMatter": {
     "title": "Faithbridge"
   }
