Tie up some loose ends

--- a/.docusaurus/docusaurus-plugin-content-pages/default/site-src-pages-projects-mdx-127.json
+++ b/.docusaurus/docusaurus-plugin-content-pages/default/site-src-pages-projects-mdx-127.json
@@ -3,7 +3,7 @@
   "permalink": "/projects",
   "source": "@site/src/pages/projects.mdx",
   "title": "Projects",
-  "description": "Acts 2",
+  "description": "Alpha2",
   "frontMatter": {
     "title": "Projects"
   }
